# windows-service-template

./: .gitignore  CMakeLists.txt  LICENSE.txt  README-template.md  README.md
main/: CMakeLists.txt
main/include/: CharacterEncoding.h  Logging.h  ServiceInstaller.h  ThreadPool.h  WindowsService.h  WindowsServiceImpl.h
main/src/: CharacterEncoding.cpp  ServiceInstaller.cpp  WindowsService.cpp  WindowsServiceImpl.cpp
